[package]
name = "pixi_byte"
version = "0.1.0"
edition = "2024"
authors = ["OriniumBrowser DeveloperTeam"]
license = "MIT OR Apache-2.0"
description = "A JavaScript engine for OriniumBrowser"
repository = "https://github.com/oriniumbrowser/pixi_byte"

[dependencies]
rustc-hash = "2.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "vm_bench"
harness = false
